--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,9 +1,16 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
+@import "../../node_modules/bootstrap/scss/functions";
+
+$input-btn-padding-y:.5rem;
+$input-btn-padding-x:1rem;
+$input-border-width: 2px;
+$input-focus-border-color:#2c82d7;
+$input-focus-box-shadow:0;
+
 @import "../../node_modules/bootstrap/scss/bootstrap.scss";
-@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@400;500;600&display=swap');
-
-
 body{
-    font-family: 'Outfit', sans-serif;
+    font-family: 'Lato', sans-serif;
 }
 
 .index-container{
@@ -13,3 +20,21 @@ body{
     align-items: center;
     min-height: 100vh;
 }
+
+.font-weight-700{
+    font-weight: 700;   
+};
+
+.font-size-1{
+    font-size: 1rem;
+};
+
+.font-size-2{
+    font-size: .75rem;
+}
+
+// .field-error{
+//     visibility: hidden;
+// }
+
+// 2c82d7
