--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,5 +1,6 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css");
 @import "../../node_modules/bootstrap/scss/functions";
 
 $primary: #0074d9;
@@ -43,6 +44,10 @@ body{
 
 .was-validated .form-control:invalid:focus, .form-control.is-invalid:focus, .was-validated .form-control:valid:focus, .form-control.is-valid:focus {
     box-shadow: none;
+}
+
+.input-group-text{
+    cursor: pointer;
 }
 
 // .field-error{
